<resources>
    <string name="app_name"><font color='#32CD32'>Lingua</font><font color='#FF7F50'>Dia</font></string>

    <!-- Splash Screen -->
    <string name="splash_description">Welcome to the magical world of words!</string>

    <!-- Start Screen -->
    <string name="collection_name">Collection name</string>
    <string name="collection_size">20 words</string>

    <!-- Search Screen -->
    <string name="word_main">Word</string>
    <string name="meanings">Meanings</string>
    <string name="search_default">Let\'s find something new!</string>

    <!-- Settings Screen -->
    <string name="go_back">Go Back</string>
    <string name="start">Start</string>

    <!-- Display Screen -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>