<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".screens.display.DisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_word_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/word_main"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_phonetics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_meanings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/meanings"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meanings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_previous"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/previous"
                android:textColor="@color/black"
                app:cornerRadius="40dp" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/next"
                android:textColor="@color/black"
                app:cornerRadius="40dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>